--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,187 +30,188 @@ jobs:
 
 ### Pre merge workflow ###############################################################################################################
 
-  build-linux-x86_64-pre-merge:
-    runs-on: nixos
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-    steps:
-      - name: Clean runner environment
-        run: rm -rf ./*
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          clean: true
-      - name: Acquire cache lock
-        run: |
-          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
-            sleep 5
-          done
-      - name: Restore Rust cache from host
-        run: |
-          set -e
-          echo "--- Restoring Rust cache from host ---"
-          if [ -d /tmp/rust-cache ] && [ -f /tmp/rust-cache/.ready ]; then
-            echo "Ready cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
-          else
-            echo "No ready cache; skipping restore."
-          fi
-      - name: Validate Rust cache
-        run: |
-          set -euo pipefail
-          CACHE=/tmp/rust-cache
-          CARGO_HOME="${CARGO_HOME:-$HOME/.cargo}"
-          TARGET_DIR="${CARGO_TARGET_DIR:-$GITHUB_WORKSPACE/target}"
-          [[ -d "$CACHE" ]] || { echo "No shared cache present."; exit 0; }
-      
-          echo "--- Cache preflight ---"
-          RUSTC="$(nix develop -c rustc -vV 2>/dev/null || rustc -vV)"
-          LOCK_SHA="$(sha256sum Cargo.lock | cut -d' ' -f1)"
-          MAN="$CACHE/.manifest"; READY="$CACHE/.ready"
-          WANT="$(printf '%s\n%s\n' "$RUSTC" "$LOCK_SHA")"
-      
-          BAD=0; REASONS=()
-      
-          echo "[1/4] Checking manifest and ready marker..."
-          if [[ ! -f "$READY" || ! -f "$MAN" ]]; then
-            echo "manifest/ready missing"
-            BAD=1; REASONS+=("manifest/ready missing")
-          else
-            HAVE="$(head -n 2 "$MAN" || true)"
-            if [[ "$WANT" != "$HAVE" ]]; then
-              echo "manifest/ready mismatch"
-              BAD=1; REASONS+=("manifest mismatch")
-            fi
-          fi
-      
-          echo "[2/4] Scanning for broken symlinks..."
-          if find "$CARGO_HOME" "$TARGET_DIR" -xtype l -print -quit >/dev/null 2>&1; then
-            echo "Broken symlink detected:"
-            find "$CARGO_HOME" "$TARGET_DIR" -xtype l -print 2>/dev/null | head -5 || true
-            BAD=1; REASONS+=("broken symlink(s)")
-          fi
-      
-          echo "[3/4] Scanning for zero-byte files..."
-          if find "$CARGO_HOME" "$TARGET_DIR" -type f -size 0 -print -quit >/dev/null 2>&1; then
-            echo "Zero-byte file detected:"
-            find "$CARGO_HOME" "$TARGET_DIR" -type f -size 0 -print 2>/dev/null | head -5 || true
-            BAD=1; REASONS+=("zero-byte file(s)")
-          fi
-      
-          echo "[4/4] Running cargo fetch integrity check..."
-          if ! nix develop -c cargo fetch --locked -q; then
-            echo "cargo fetch failed"
-            BAD=1; REASONS+=("cargo fetch failed")
-          fi
-      
-          if [[ $BAD -eq 1 ]]; then
-            echo "--- Purging suspect parts of cache ---"
-            if [[ ${#REASONS[@]} -gt 1 ]]; then
-              echo "Multiple issues (${REASONS[*]}): removing entire target/"
-              rm -rf "$TARGET_DIR" || true
-            else
-              echo "Single issue (${REASONS[*]}): purging build dirs"
-              find "$TARGET_DIR" -type d -name build -prune -exec rm -rf {} + || true
-            fi
-            echo "Clearing registry/src and git/checkouts..."
-            rm -rf "$CARGO_HOME"/registry/src/* "$CARGO_HOME"/git/checkouts/* || true
-          else
-            echo "Cache looks healthy."
-          fi
-      
-          echo "--- Preflight summary: ${REASONS[*]:-OK} ---"
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
-      - name: Acquire AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
-      - name: Login to container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: Build
-        run: nix develop -c bash -c "cargo build --locked --profile=release"
-      - name: Test
-        run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
-      - name: Lint
-        run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
-      - name: Formatting
-        run: nix develop -c bash -c "cargo fmt --check"
-      - name: Acquire cache lock
-        run: |
-          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
-            sleep 5
-          done
-      - name: Save Rust cache to host
-        run: |
-          set -e
-          echo "--- Saving Rust cache to host cache ---"
-          mkdir -p /tmp/rust-cache
-          nix shell nixpkgs#rsync -c bash -c "
-            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a --delete ./target/ /tmp/rust-cache/target/
-          "
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
-          RUSTC="$(nix develop -c rustc -vV 2>/dev/null || rustc -vV)"
-          LOCK_SHA="$(sha256sum Cargo.lock | cut -d' ' -f1)"
-          printf '%s\n%s\n' "$RUSTC" "$LOCK_SHA" > /tmp/rust-cache/.manifest
-          touch /tmp/rust-cache/.ready
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
-      #- name: Run cargo-deny to check licenses
-      #  uses: EmbarkStudios/cargo-deny-action@v1
-      #  with:
-      #    command: check licenses
-      - name: Build chain specs
-        run: |
-            source ./dev/envs/devnet/.envrc
-            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
-            source ./dev/envs/ci-preview/.envrc
-            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
-            source ./dev/envs/staging-preview/.envrc
-            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
-      - name: Build and push docker image
-        run: |
-          cp target/release/partner-chains-demo-node .
-          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
-          docker build -f dev/ci/Dockerfile -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ github.sha }} .
-          docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ github.sha }}
-      - name: Upload partner-chains-node artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: partner-chains-node-artifact
-          path: ./partner-chains-demo-node
-      - name: Upload chain spec artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: chain-specs
-          path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
+  #build-linux-x86_64-pre-merge:
+  #  runs-on: nixos
+  #  if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+  #  steps:
+  #    - name: Clean runner environment
+  #      run: rm -rf ./*
+  #    - name: Checkout repository
+  #      uses: actions/checkout@v4
+  #      with:
+  #        fetch-depth: 0
+  #        clean: true
+  #    - name: Acquire cache lock
+  #      run: |
+  #        until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+  #          sleep 5
+  #        done
+  #    - name: Restore Rust cache from host
+  #      run: |
+  #        set -e
+  #        echo "--- Restoring Rust cache from host ---"
+  #        if [ -d /tmp/rust-cache ] && [ -f /tmp/rust-cache/.ready ]; then
+  #          echo "Ready cache found. Restoring..."
+  #          mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+  #          nix shell nixpkgs#rsync -c bash -c "
+  #            rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+  #            rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+  #            rsync -a /tmp/rust-cache/target/ ./target/
+  #          "
+  #        else
+  #          echo "No ready cache; skipping restore."
+  #        fi
+  #    - name: Validate Rust cache
+  #      run: |
+  #        set -euo pipefail
+  #        CACHE=/tmp/rust-cache
+  #        CARGO_HOME="${CARGO_HOME:-$HOME/.cargo}"
+  #        TARGET_DIR="${CARGO_TARGET_DIR:-$GITHUB_WORKSPACE/target}"
+  #        [[ -d "$CACHE" ]] || { echo "No shared cache present."; exit 0; }
+  #    
+  #        echo "--- Cache preflight ---"
+  #        RUSTC="$(nix develop -c rustc -vV 2>/dev/null || rustc -vV)"
+  #        LOCK_SHA="$(sha256sum Cargo.lock | cut -d' ' -f1)"
+  #        MAN="$CACHE/.manifest"; READY="$CACHE/.ready"
+  #        WANT="$(printf '%s\n%s\n' "$RUSTC" "$LOCK_SHA")"
+  #    
+  #        BAD=0; REASONS=()
+  #    
+  #        echo "[1/4] Checking manifest and ready marker..."
+  #        if [[ ! -f "$READY" || ! -f "$MAN" ]]; then
+  #          echo "manifest/ready missing"
+  #          BAD=1; REASONS+=("manifest/ready missing")
+  #        else
+  #          HAVE="$(head -n 2 "$MAN" || true)"
+  #          if [[ "$WANT" != "$HAVE" ]]; then
+  #            echo "manifest/ready mismatch"
+  #            BAD=1; REASONS+=("manifest mismatch")
+  #          fi
+  #        fi
+  #    
+  #        echo "[2/4] Scanning for broken symlinks..."
+  #        if find "$CARGO_HOME" "$TARGET_DIR" -xtype l -print -quit >/dev/null 2>&1; then
+  #          echo "Broken symlink detected:"
+  #          find "$CARGO_HOME" "$TARGET_DIR" -xtype l -print 2>/dev/null | head -5 || true
+  #          BAD=1; REASONS+=("broken symlink(s)")
+  #        fi
+  #    
+  #        echo "[3/4] Scanning for zero-byte files..."
+  #        if find "$CARGO_HOME" "$TARGET_DIR" -type f -size 0 -print -quit >/dev/null 2>&1; then
+  #          echo "Zero-byte file detected:"
+  #          find "$CARGO_HOME" "$TARGET_DIR" -type f -size 0 -print 2>/dev/null | head -5 || true
+  #          BAD=1; REASONS+=("zero-byte file(s)")
+  #        fi
+  #    
+  #        echo "[4/4] Running cargo fetch integrity check..."
+  #        if ! nix develop -c cargo fetch --locked -q; then
+  #          echo "cargo fetch failed"
+  #          BAD=1; REASONS+=("cargo fetch failed")
+  #        fi
+  #    
+  #        if [[ $BAD -eq 1 ]]; then
+  #          echo "--- Purging suspect parts of cache ---"
+  #          if [[ ${#REASONS[@]} -gt 1 ]]; then
+  #            echo "Multiple issues (${REASONS[*]}): removing entire target/"
+  #            rm -rf "$TARGET_DIR" || true
+  #          else
+  #            echo "Single issue (${REASONS[*]}): purging build dirs"
+  #            find "$TARGET_DIR" -type d -name build -prune -exec rm -rf {} + || true
+  #          fi
+  #          echo "Clearing registry/src and git/checkouts..."
+  #          rm -rf "$CARGO_HOME"/registry/src/* "$CARGO_HOME"/git/checkouts/* || true
+  #        else
+  #          echo "Cache looks healthy."
+  #        fi
+  #    
+  #        echo "--- Preflight summary: ${REASONS[*]:-OK} ---"
+  #    - name: Release cache lock
+  #      if: always()
+  #      run: rmdir /tmp/rust-cache.lock
+  #    - name: Acquire AWS credentials
+  #      uses: aws-actions/configure-aws-credentials@v4
+  #      with:
+  #        role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+  #        aws-region: ${{ env.AWS_REGION }}
+  #    - name: Login to container registry
+  #      uses: docker/login-action@v3
+  #      with:
+  #        registry: ${{ secrets.ECR_REGISTRY_SECRET }}
+  #    - name: Build
+  #      run: nix develop -c bash -c "cargo build --locked --profile=release"
+  #    - name: Test
+  #      run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
+  #    - name: Lint
+  #      run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
+  #    - name: Formatting
+  #      run: nix develop -c bash -c "cargo fmt --check"
+  #    - name: Acquire cache lock
+  #      run: |
+  #        until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+  #          sleep 5
+  #        done
+  #    - name: Save Rust cache to host
+  #      run: |
+  #        set -e
+  #        echo "--- Saving Rust cache to host cache ---"
+  #        mkdir -p /tmp/rust-cache
+  #        nix shell nixpkgs#rsync -c bash -c "
+  #          rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+  #          rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+  #          rsync -a --delete ./target/ /tmp/rust-cache/target/
+  #        "
+  #        echo "--- Verifying cache contents ---"
+  #        ls -laR /tmp/rust-cache
+  #        RUSTC="$(nix develop -c rustc -vV 2>/dev/null || rustc -vV)"
+  #        LOCK_SHA="$(sha256sum Cargo.lock | cut -d' ' -f1)"
+  #        printf '%s\n%s\n' "$RUSTC" "$LOCK_SHA" > /tmp/rust-cache/.manifest
+  #        touch /tmp/rust-cache/.ready
+  #    - name: Release cache lock
+  #      if: always()
+  #      run: rmdir /tmp/rust-cache.lock
+  #    #- name: Run cargo-deny to check licenses
+  #    #  uses: EmbarkStudios/cargo-deny-action@v1
+  #    #  with:
+  #    #    command: check licenses
+  #    - name: Build chain specs
+  #      run: |
+  #          source ./dev/envs/devnet/.envrc
+  #          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+  #          nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
+  #          source ./dev/envs/ci-preview/.envrc
+  #          target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
+  #          nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
+  #          source ./dev/envs/staging-preview/.envrc
+  #          target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
+  #          nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
+  #    - name: Build and push docker image
+  #      run: |
+  #        cp target/release/partner-chains-demo-node .
+  #        nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
+  #        docker build -f dev/ci/Dockerfile -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ github.sha }} .
+  #        docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ github.sha }}
+  #    - name: Upload partner-chains-node artifact
+  #      uses: actions/upload-artifact@v4
+  #      with:
+  #        name: partner-chains-node-artifact
+  #        path: ./partner-chains-demo-node
+  #    - name: Upload chain spec artifacts
+  #      uses: actions/upload-artifact@v4
+  #      with:
+  #        name: chain-specs
+  #        path: |
+  #          ./devnet_chain_spec.json
+  #          ./ci_preview_chain_spec.json
+  #          ./staging_preview_chain_spec.json
 
   local-env:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-    needs: build-linux-x86_64-pre-merge
+    #needs: build-linux-x86_64-pre-merge
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        markers: [smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards]
+        markers: [reserve]
+        #markers: [smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -221,7 +222,8 @@ jobs:
         uses: ./.github/actions/tests/local-environment-tests
         with:
           tag: CI
-          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ github.sha }}
+          image: ghcr.io/input-output-hk/partner-chains/partner-chains-node-unstable:latest
+          #image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ github.sha }}
           sha: ${{ github.sha }}
           markers: ${{ matrix.markers }}
         env:
