save cache on master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,16 @@
 name: CI
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
+  push:
     branches:
-      - master
-  workflow_dispatch:
-    inputs:
-      sha:
-        description: 'Commit SHA to build'
-        required: true
-        type: string
+      - main
+      - "v[0-9]+.[0-9]+.x"
+    tags:
+      - "v*"
+
+  pull_request:
+    branches:
+      - "**"
 
 env:
   AWS_REGION: "eu-central-1"
@@ -42,6 +42,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           prefix-key: "v0-rust"
+          save-if: ${{ github.ref == 'refs/heads/main' }}
           cache-workspace-crates: "true"
 
       - name: build project
